--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ D-i-m-i work done on mask icons
     <!-- CSS only -->
 
     <!-- link to add Bootstrap -->
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous"> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
     <!-- <link rel="stylesheet" href="sheet/range_style.css"> -->
     <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>-->
@@ -36,7 +36,7 @@ D-i-m-i work done on mask icons
 </head>
 
 <body class="body">
-  <div class="container">
+  <div class="container-local">
     <div class="banner">
       <div class="banner-top">
         <img src="images/airvica_logo_c.png" alt="airvica_logo" style="width: 177px; margin-left: 15px; height: fit-content;">
@@ -50,8 +50,9 @@ D-i-m-i work done on mask icons
       </div>
       <!-- Intro text -->
 
-      <div class="banner-text-and-video">
-        <div class="banner-text">
+      <!-- <div class="container"> -->
+      <div class="banner-text-and-video row">
+        <div class="banner-text col-sm-12 col-lg-8">
           <div class="description">
             <p>This webapp helps you estimate the spatially varying infection risk from airborne transmission of the SARS-CoV-2 virus in a rectangular indoor space. The model assumes that the infectious particles carrying the virus are carried around the room by a recirculating airflow, diffused due to turbulence in the air and removed by the room’s ventilation system, the natural inactivation of the virus and gravitational settling. For simplicity’s sake, the model only considers a single stationary, asymptomatic, infectious person in the room.</p>
             <p>For a simple explanation of the model and the parameters chosen, please refer <a href="Simple_Explanation.pdf">here</a>.</p>
@@ -65,11 +66,13 @@ D-i-m-i work done on mask icons
             </p>
           </div>
         </div>
-        <div class="virus-illustration">
+        <div class="embedded-video col">
           <!-- <img src="images/virus.jpg" alt="virus_illustration" style="height: 406px;"> -->
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/udfSJ1wj1YE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe width="90%" height="100%" src="https://www.youtube.com/embed/udfSJ1wj1YE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <!-- <iframe width="100%" height="100%" src="https://www.youtube.com/embed/udfSJ1wj1YE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
         </div>
       </div>
+    <!-- </div> -->
     </div>
 
 
@@ -77,11 +80,10 @@ D-i-m-i work done on mask icons
       <h2> Parameters</h2>
 
       <!-- model inputs -->
-
       <div style="display: flex; justify-content: space-between;">
         <div class="controls-card">
           <div class="card-headings">
-            <p class="h2">Room dimensions</p>
+            <p class="h2-local">Room dimensions</p>
             <span class="hovertext" text-hover="This is the placholder text for the card description">
               <img src="images/info_mark.png" alt="card information" class="question-mark">
             </span>
@@ -124,7 +126,7 @@ D-i-m-i work done on mask icons
 
         <div class="controls-card" style="display: flex; flex-direction: column; justify-content: space-between;">
           <div class="card-headings">
-            <p class="h2">Infectious person</p>
+            <p class="h2-local">Infectious person</p>
             <span class="hovertext" text-hover="This is the placholder text for the card description">
               <img src="images/info_mark.png" alt="card information" class="question-mark">
             </span>
@@ -178,7 +180,7 @@ D-i-m-i work done on mask icons
 
         <div class="controls-card" style="display: flex; flex-direction: column; justify-content: space-between;">
           <div class="card-headings">
-            <p class="h2">Susceptible person</p>
+            <p class="h2-local">Susceptible person</p>
             <span class="hovertext" text-hover="This is the placholder text for the card description">
               <img src="images/info_mark.png" alt="card information" class="question-mark">
             </span>
@@ -235,7 +237,7 @@ D-i-m-i work done on mask icons
 
         <div class="controls-card">
           <div class="card-headings">
-            <p class="h2">Ventilation</p>
+            <p class="h2-local">Ventilation</p>
             <span class="hovertext" text-hover="This is the placholder text for the card description">
               <img src="images/info_mark.png" alt="card information" class="question-mark">
             </span>
@@ -273,7 +275,7 @@ D-i-m-i work done on mask icons
 
         <div class="controls-card">
           <div class="card-headings">
-            <p class="h2">Event</p>
+            <p class="h2-local">Event</p>
             <span class="hovertext" text-hover="This is the placholder text for the card description">
               <img src="images/info_mark.png" alt="card information" class="question-mark">
             </span>
@@ -309,6 +311,7 @@ D-i-m-i work done on mask icons
           <!-- </div> -->
         </div>
       </div>
+
       <br>
       <br>
       <!-- continuation of model inputs -->
@@ -317,7 +320,7 @@ D-i-m-i work done on mask icons
 
       <div name="advanced-options" id="advanced-options" class="advanced-card" style="display:none;">
         <div class="card-headings">
-          <p class="h2">Advanced Options</p>
+          <p class="h2-local">Advanced Options</p>
           <span class="hovertext" text-hover="This is the placholder text for the card description">
             <img src="images/info_mark.png" alt="card information" class="question-mark">
           </span>
@@ -415,7 +418,7 @@ D-i-m-i work done on mask icons
         <div style="display: flex; flex-direction: column;">
           <div style="display: flex;">
             <div>
-              <p class="h2">Dynamic 2D-room representation</p>
+              <p class="h2-local">Dynamic 2D-room representation</p>
             </div>
             <div>
               <span class="hovertext" text-hover="This is the placholder text for the card description">
@@ -470,7 +473,7 @@ D-i-m-i work done on mask icons
         <div style="display: flex; flex-direction: column;">
           <div style="display: flex">
             <div>
-              <p class="h2">3D-room and air circulation illustration</p>
+              <p class="h2-local">3D-room and air circulation illustration</p>
             </div>
             <div>
               <span class="hovertext" text-hover="This is the placholder text for the card description">
@@ -491,12 +494,12 @@ D-i-m-i work done on mask icons
           </div>
           <div>
             <button type="button" onclick="Run_no_modes()" class="primary-button">Run</button>
-            <button type="button" onclick="reset_results();" class="primary-button">Stop</button>
+            <button type="button" onclick="reset_results();" class="primary-button" style="background-color: var(--stop-button-color); width: var(--stop-button-width)">Stop</button>
           </div>
 
 
           <!-- loading bar to show progress of model-->
-          <div class="progress-bar" id="progress-bar" style="margin-top: 10px;">
+          <div class="progress-bar-local" id="progress-bar" style="margin-top: 10px;">
             <div class="the-bar" id="the-bar" style="display:none;"></div>
           </div>
         </div>
@@ -531,11 +534,11 @@ D-i-m-i work done on mask icons
         <div>
           <h3>Calculate the concentration and risk at a specific position:</h3>
           <button type="button" onclick="Run_position()" class="primary-button">Run</button>
-          <button type="button" onclick="reset_results()" class="primary-button">Stop</button>
+          <button type="button" onclick="reset_results()" class="primary-button" style="background-color: var(--stop-button-color); width: var(--stop-button-width)">Stop</button>
           </div>
 
           <!-- <div class="loader" id="loading" style="display:none"></div> -->
-          <div class="progress-bar">
+          <div class="progress-bar-local">
             <div class="the-bar" id="position-loading" style="display:none;">   </div>
           </div>
 
@@ -554,10 +557,10 @@ D-i-m-i work done on mask icons
           <div>
           <h3>Calculate the concentration throughout the room at the end of the event:</h3>
           <button type="button" onclick="Run_C_contour()" class="primary-button">Run</button>
-          <button type="button" onclick="reset_results()" class="primary-button">Stop</button>
+          <button type="button" onclick="reset_results()" class="primary-button" style="background-color: var(--stop-button-color); width: var(--stop-button-width)">Stop</button>
         </div>
         <!-- <div class="loader" id="loading2" style="display:none"></div> -->
-        <div class="progress-bar">
+        <div class="progress-bar-local">
           <div class="the-bar" id="C-contour-loading" style="display:none;">   </div>
         </div>
 
@@ -566,11 +569,11 @@ D-i-m-i work done on mask icons
         <div>
           <h3>Calculate the average concentration in the room:</h3>
           <button type="button" onclick="Run_avg_C()" class="primary-button">Run</button>
-          <button type="button" onclick="reset_results()" class="primary-button">Stop</button>
+          <button type="button" onclick="reset_results()" class="primary-button" style="background-color: var(--stop-button-color); width: var(--stop-button-width)">Stop</button>
         </div><br>
 
           <!-- loading bar to show progress of model-->
-          <div class="progress-bar">
+          <div class="progress-bar-local">
               <div class="the-bar" id="C-avg-loading" style="display:none;">   </div>
           </div>
 
@@ -583,10 +586,10 @@ D-i-m-i work done on mask icons
           <div>
             <h3>Calculate the average infection risk in the room:</h3>
             <button type="button" onclick="Run_avg_P()" class="primary-button">Run</button>
-            <button type="button" onclick="reset_results()" class="primary-button">Stop</button>
+            <button type="button" onclick="reset_results()" class="primary-button" style="background-color: var(--stop-button-color); width: var(--stop-button-width)">Stop</button>
           </div><br>
           <!-- loading bar to show progress of model-->
-          <div class="progress-bar">
+          <div class="progress-bar-local">
             <div class="the-bar" id="P-avg-loading" style="display:none;">   </div>
           </div>
 
