--- a/index.html
+++ b/index.html
@@ -41,18 +41,24 @@ D-i-m-i work done on mask icons
       <div class="banner-top">
         <img src="images/airvica_logo_c.png" alt="airvica_logo" style="width: 177px; margin-left: 15px; height: fit-content;">
         <!-- <div class="title-logos"> -->
-        <h1 style="margin: 0;">Airborne Virus Risk Calculator</h1>
-        <div style="display: flex;">
-          <img src="images/oxford_logo_c.png" alt="oxford_uni_logo" style="margin-left: 20px; width: 139px; height: 41px; box-shadow: var(--box-shadow)">
+        <!-- <div style="display: flex;"> -->
+          <h1 style="margin: 0 0 0 15px;">Airborne Virus Risk Calculator</h1>
+        <div>
+          <img src="images/oxford_logo_c.png" alt="oxford_uni_logo" style="margin-left: 15px; width: 139px; height: 41px; box-shadow: var(--box-shadow)">
           <img src="images/cardiff_logo_c.jpeg" alt="cardiff_uni_logo" style="width: 88px; height: 41px; margin-left: 10px; box-shadow: var(--box-shadow)">
         </div>
+          <!-- </div> -->
+        <!-- <div style="display: flex;">
+          <img src="images/oxford_logo_c.png" alt="oxford_uni_logo" style="margin-left: 20px; width: 139px; height: 41px; box-shadow: var(--box-shadow)">
+          <img src="images/cardiff_logo_c.jpeg" alt="cardiff_uni_logo" style="width: 88px; height: 41px; margin-left: 10px; box-shadow: var(--box-shadow)">
+        </div> -->
         <!-- </div> -->
       </div>
       <!-- Intro text -->
 
       <!-- <div class="container"> -->
       <div class="banner-text-and-video row">
-        <div class="banner-text col-sm-12 col-lg-8">
+        <div class="banner-text col-sm-12 col-lg-8" style="padding-right: 40px;">
           <div class="description">
             <p>This webapp helps you estimate the spatially varying infection risk from airborne transmission of the SARS-CoV-2 virus in a rectangular indoor space. The model assumes that the infectious particles carrying the virus are carried around the room by a recirculating airflow, diffused due to turbulence in the air and removed by the room’s ventilation system, the natural inactivation of the virus and gravitational settling. For simplicity’s sake, the model only considers a single stationary, asymptomatic, infectious person in the room.</p>
             <p>For a simple explanation of the model and the parameters chosen, please refer <a href="Simple_Explanation.pdf">here</a>.</p>
@@ -80,7 +86,7 @@ D-i-m-i work done on mask icons
       <h2> Parameters</h2>
 
       <!-- model inputs -->
-      <div style="display: flex; justify-content: space-between;">
+      <div style="display: flex; justify-content: start; flex-wrap: wrap;">
         <div class="controls-card">
           <div class="card-headings">
             <p class="h2-local">Room dimensions</p>
@@ -295,11 +301,18 @@ D-i-m-i work done on mask icons
               </div>
 
               <div id="break-inputs">
-                <label for="break-inputs"> Set when the break starts and ends.<br></label>
-                <input type="range" id="break-part1" name="break-part1"
-                min="0" max="0.5" step="0.05" value="0.2" oninput="show_break_numbers()">
-                <input type="range" id="break-part2" name="break-part2"
-                min="0" max="0.5" step="0.05" value="0.3" oninput="show_break_numbers()">
+                <div style="display: flex; flex-direction: column;">
+                  <div>
+                    <label for="break-inputs"> Set when the break starts and ends.<br></label>
+                  </div>
+
+                  <div>
+                    <input type="range" id="break-part1" name="break-part1"
+                    min="0" max="0.5" step="0.05" value="0.2" oninput="show_break_numbers()">
+                    <input type="range" id="break-part2" name="break-part2"
+                    min="0" max="0.5" step="0.05" value="0.3" oninput="show_break_numbers()">
+                  </div>
+                </div>
                 <br>
                 <div id="break-numbers">
                   <span id="break-start">0.2</span>
@@ -414,7 +427,7 @@ D-i-m-i work done on mask icons
       </div>
 
       <br>
-      <div style="display: flex; justify-content: space-between;">
+      <div style="display: flex; justify-content: space-between; flex-wrap: wrap;">
         <div style="display: flex; flex-direction: column;">
           <div style="display: flex;">
             <div>
@@ -482,7 +495,7 @@ D-i-m-i work done on mask icons
             </div>
           </div>
           <div class="room-air-illustration">
-            <img src="images/air_circulation.png" alt="air_circulation_schematic" style="width: 1000px; border-radius: 12px;">
+            <img src="images/air_circulation.png" alt="air_circulation_schematic" style="width: 100%; border-radius: 12px;">
           </div>
         </div>
       </div>
@@ -530,7 +543,7 @@ D-i-m-i work done on mask icons
       <div style="margin-top: 10px;">
         <button type="button" class="secondary-button" onclick="explore_more()">Explore more</button>
       </div>
-      <div id="Explore_more_container" style="display: none;">
+      <div id="Explore_more_container" style="display: none; margin-top: 15px;">
         <div>
           <h3>Calculate the concentration and risk at a specific position:</h3>
           <button type="button" onclick="Run_position()" class="primary-button">Run</button>
