--- a/index.html
+++ b/index.html
@@ -38,27 +38,36 @@ D-i-m-i work done on mask icons
 <body class="body">
   <div class="container-local">
     <div class="banner">
-      <div class="banner-top">
-        <img src="images/airvica_logo_c.png" alt="airvica_logo" style="width: 177px; margin-left: 15px; height: fit-content;">
-        <!-- <div class="title-logos"> -->
+      <!-- <div class="banner-top"> -->
+        <!-- <div class="row"> -->
+          <!-- <div class="col col-6"> -->
+      <div style="display: flex; margin-bottom: 10px; justify-content: space-between;">
+        <img src="images/airvica_logo_c.png" alt="airvica_logo" style="width: 10%; min-width: 100px; height: fit-content;">
+        <h1 style="margin: 0 0 0 15px; font-size: calc(1em + 1.5vw)">Airborne Virus Risk Calculator</h1>
         <!-- <div style="display: flex;"> -->
-          <h1 style="margin: 0 0 0 15px;">Airborne Virus Risk Calculator</h1>
-        <div>
-          <img src="images/oxford_logo_c.png" alt="oxford_uni_logo" style="margin-left: 15px; width: 139px; height: 41px; box-shadow: var(--box-shadow)">
-          <img src="images/cardiff_logo_c.jpeg" alt="cardiff_uni_logo" style="width: 88px; height: 41px; margin-left: 10px; box-shadow: var(--box-shadow)">
-        </div>
+        <img src="images/oxford_logo_c.png" alt="oxford_uni_logo" style="margin-left: 15px; width: 10%; height: fit-content; min-width: 80px; box-shadow: var(--box-shadow)">
+        <img src="images/cardiff_logo_c.jpeg" alt="cardiff_uni_logo" style="width: 10%; height: fit-content; min-width: 80px; box-shadow: var(--box-shadow); margin-left: 10px;">
+        <!-- </div> -->
+      </div>
+          <!-- </div> -->
+        <!-- <div class="title-logos"> -->
+          <!-- <div style="display: flex;"> -->
+          <!-- <div class="col col-6"> -->
+          <!-- </div> -->
+        <!-- <div class="col col-sm-12 col-lg-4">
+        </div> -->
           <!-- </div> -->
         <!-- <div style="display: flex;">
           <img src="images/oxford_logo_c.png" alt="oxford_uni_logo" style="margin-left: 20px; width: 139px; height: 41px; box-shadow: var(--box-shadow)">
           <img src="images/cardiff_logo_c.jpeg" alt="cardiff_uni_logo" style="width: 88px; height: 41px; margin-left: 10px; box-shadow: var(--box-shadow)">
         </div> -->
         <!-- </div> -->
-      </div>
+      <!-- </div> -->
       <!-- Intro text -->
 
       <!-- <div class="container"> -->
       <div class="banner-text-and-video row">
-        <div class="banner-text col-sm-12 col-lg-8" style="padding-right: 40px;">
+        <div class="banner-text col-sm-12 col-lg-8">
           <div class="description">
             <p>This webapp helps you estimate the spatially varying infection risk from airborne transmission of the SARS-CoV-2 virus in a rectangular indoor space. The model assumes that the infectious particles carrying the virus are carried around the room by a recirculating airflow, diffused due to turbulence in the air and removed by the room’s ventilation system, the natural inactivation of the virus and gravitational settling. For simplicity’s sake, the model only considers a single stationary, asymptomatic, infectious person in the room.</p>
             <p>For a simple explanation of the model and the parameters chosen, please refer <a href="Simple_Explanation.pdf">here</a>.</p>
@@ -503,7 +512,7 @@ D-i-m-i work done on mask icons
       <div style="display: flex; margin-top: 20px; justify-content: space-between;">
         <div style="display: flex; flex-direction: column;">
           <div>
-            <h2>Results</h2>
+            <h2 style="font-size: var(--font-size-results)">Results</h2>
           </div>
           <div>
             <button type="button" onclick="Run_no_modes()" class="primary-button">Run</button>
@@ -545,7 +554,7 @@ D-i-m-i work done on mask icons
       </div>
       <div id="Explore_more_container" style="display: none; margin-top: 15px;">
         <div>
-          <h3>Calculate the concentration and risk at a specific position:</h3>
+          <h3 style="font-size: var(--font-size-results)">Calculate the concentration and risk at a specific position:</h3>
           <button type="button" onclick="Run_position()" class="primary-button">Run</button>
           <button type="button" onclick="reset_results()" class="primary-button" style="background-color: var(--stop-button-color); width: var(--stop-button-width)">Stop</button>
           </div>
@@ -568,7 +577,7 @@ D-i-m-i work done on mask icons
           <br>
 
           <div>
-          <h3>Calculate the concentration throughout the room at the end of the event:</h3>
+          <h3 style="font-size: var(--font-size-results)">Calculate the concentration throughout the room at the end of the event:</h3>
           <button type="button" onclick="Run_C_contour()" class="primary-button">Run</button>
           <button type="button" onclick="reset_results()" class="primary-button" style="background-color: var(--stop-button-color); width: var(--stop-button-width)">Stop</button>
         </div>
@@ -580,7 +589,7 @@ D-i-m-i work done on mask icons
         <div class="chart" id="conc_contour" style="display:none"> </div> <br>
 
         <div>
-          <h3>Calculate the average concentration in the room:</h3>
+          <h3 style="font-size: var(--font-size-results)">Calculate the average concentration in the room:</h3>
           <button type="button" onclick="Run_avg_C()" class="primary-button">Run</button>
           <button type="button" onclick="reset_results()" class="primary-button" style="background-color: var(--stop-button-color); width: var(--stop-button-width)">Stop</button>
         </div><br>
@@ -597,7 +606,7 @@ D-i-m-i work done on mask icons
 
 
           <div>
-            <h3>Calculate the average infection risk in the room:</h3>
+            <h3 style="font-size: var(--font-size-results)">Calculate the average infection risk in the room:</h3>
             <button type="button" onclick="Run_avg_P()" class="primary-button">Run</button>
             <button type="button" onclick="reset_results()" class="primary-button" style="background-color: var(--stop-button-color); width: var(--stop-button-width)">Stop</button>
           </div><br>
